<resources>
    <string name="app_name">ShoppingList</string>
    <string name="note">Заметки</string>
    <string name="shop_list">shop_list</string>
    <string name="new_item">new_item</string>
    <string name="new_item_edit">New item</string>
    <string name="save_note">save</string>

    <string name="title_note">Заголовок</string>

    <string name="new_list">Новый список</string>
    <string name="list_name">Название списка</string>
    <string name="create">Создать</string>
    <string name="description_note">Описание</string>
    <string name="cancel">Отмена</string>
    <string name="want_delete">Вы хотите удалить данный список?</string>
    <string name="delete">Удалить</string>
    <string name="deletes">Удаление</string>
    <string name="rename">Переименовать</string>
    <string name="rename_list">Переименование списка</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="delete_list">Delete list</string>
    <string name="clear_list">Clear list</string>
    <string name="share_list">Share list</string>
    <string name="empty">Empty</string>
    <string name="update_item">Обновление элемента</string>
    <string name="name">Name</string>
    <string name="info">Info</string>
    <string name="update">Обновить</string>
    <string name="general">General</string>
    <string name="chose_note_style">Chose note style</string>
    <string name="chose_time_formatter">Chose time style</string>
    <string name="remove_ads">Remove ads</string>
    <string name="remove_all_ads">Remove all ads</string>
    <string name="theme_set">Theme settings</string>
    <string name="theme_chose">Chose theme</string>
    <string name="note_text_setting">Note text setting</string>
    <string name="text_size">Text size</string>
    <string name="title_text_size">Title text size</string>
    <string name="content_text_size">Content text size</string>
    <string name="shopping_list">Список покупок</string>
    <string name="settings">Настройки</string>
</resources>