<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_delete_list"
        android:title="@string/delete_list" />
    <item
        android:id="@+id/menu_clear_list"
        android:title="@string/clear_list" />

    <item
        android:id="@+id/menu_share_list"
        android:title="@string/share_list" />

    <item
        android:id="@+id/menu_new_item"
        android:icon="@drawable/ic_add"
        android:orderInCategory="1"
        android:title="new"
        app:actionLayout="@layout/edit_action_layout"
        app:showAsAction="always|collapseActionView"
        tools:ignore="HardcodedText" />
    <item
        android:id="@+id/menu_save_item"
        android:icon="@drawable/ic_save"
        android:orderInCategory="2"
        android:title="save"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction,HardcodedText" />

</menu>